# dagskra.rs

./: .gitignore  Cargo.toml  README.md  askama.toml
src/: date_format.rs  fetch.rs  lib.rs  listing.rs  main.rs
templates/: _listings.html  index.html  listing.html
templates/htmx/: listings.html
