[package]
description = "Sjónvarpsdagskrá RÚV"
edition = "2021"
name = "dagskra"
version = "0.4.0"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.3"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
