[package]
description = "Sjónvarpsdagskrá RÚV"
edition = "2021"
name = "dagskra"
version = "0.4.0"

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
axum-htmx = { version = "0.5.0", features = ["guards"] }
chrono = { version = "0.4.33", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
